--- a/.github/workflows/Windows 10 - RustDesk.yml
+++ b/.github/workflows/Windows 10 - RustDesk.yml
@@ -18,4 +18,7 @@ jobs:
       - name: Log In To AnyDesk
         run: cmd /c show.bat
 
+      - name: Time Counter
+        run: python time.py
+
 
